<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="activity1">Layout Exercise</string>
    <string name="activity2">Button Exercise</string>
    <string name="activity3">Calculator</string>
    <string name="activity4">Connect 3</string>
    <string name="activity5">Passing Intents</string>
    <string name="activity6">Menus</string>
    <string name="activity7">Opening Maps</string>
    <string name="activity8">Passing Intents</string>
    <string name="activity9">Passing Intents</string>
    <string name="activity10">Passing Intents</string>
    <string name="commentButton">Like</string>
    <string name="likeButton">Share</string>
    <string name="commentHere">Comment here</string>
    <string name="username1">boy_fomo</string>
    <string name="username2">haruhihi_24</string>
    <string name="username3">brunoboy</string>
    <string name="username4">smith_05</string>
    <string name="username5">play_persona3R</string>
    <string name="username6">jaaaames_baxter</string>
    <string name="username7">jorgen_von</string>
    <string name="username8">jonjon</string>
    <string name="username9">scorzizi_zizi</string>
    <string name="username10">joker_maurice</string>
    <string name="username11">si_stranding</string>
    <string name="captions1"><b>brunoboy</b> Just rewatched The Irishman again today! I noticed more of the nuances the 3rd time around</string>
    <string name="captions2"><b>play_persona3R</b> Had a fun time playing Persona 3 Reload. Showed me a glimpse of what my life could\'ve been &#128546;</string>
    <string name="captions3"><b>si_stranding</b> Saw this AMAZING view while walking alone. I just HAD to take a picture 📸</string>
    <string name="captions4"><b>boy_fomo</b> He is literally me</string>
    <string name="captions5"><b>jorgen_von</b> He is HIM. THAT\'S WHY HE\'S THE GOAT!!!! AKJHADSFKLJHA</string>
    <string name="avatarContentDesc">avatar</string>
    <string name="postContentDesc">post</string>
    <string name="btnExercise1">Close</string>
    <string name="btnExercise2">Toast</string>
    <string name="btnExercise3">Change BG</string>
    <string name="btnExercise4">Change Button BG</string>
    <string name="btnExercise5">Disappear</string>
    <string name="returnExercise">Return</string>
    <string name="calc0">0</string>
    <string name="calc1">1</string>
    <string name="calc2">2</string>
    <string name="calc3">3</string>
    <string name="calc4">4</string>
    <string name="calc5">5</string>
    <string name="calc6">6</string>
    <string name="calc7">7</string>
    <string name="calc8">8</string>
    <string name="calc9">9</string>
    <string name="calcDivide">/</string>
    <string name="calcMultiply">*</string>
    <string name="calcMinus">-</string>
    <string name="calcPlus">+</string>
    <string name="calcDot">.</string>
    <string name="calcEquals">=</string>
    <string name="calcDelete">Delete</string>
    <string name="menu1">Change</string>
    <string name="change1">Shrink</string>
    <string name="change2">Change color</string>
    <string name="change3">Change to Rounded Square</string>
    <string name="change4">Move Position</string>
    <string name="change5">Change to Transparent</string>
    <string name="menu2">Reset</string>
    <string name="menu3">Exit</string>
    <string name="location1">Biga Pit, Toledo City</string>
    <string name="location2">Numazu, Japan</string>
    <string name="location3">Netherlands, Amsterdam</string>
    <string name="location4">Rome, Italy</string>
    <string name="location5">Sicily, Italy</string>
</resources>