<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsExercise">

    <ScrollView
        android:id="@+id/location_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/locationPin1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/place1pin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/locationPin2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/place2pin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/locationPin3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/place3pin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationName4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location4"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/locationPin4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/place4pin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationName5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location5"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/locationPin5"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/place5pin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>